# C-Template

./: CMakeLists.txt
essentials/: AccPolicy.hpp  CMakeLists.txt  sequential.hpp  varTypeDict.hpp
essentials/test/: CMakeLists.txt  UnitEssentials.cpp
